--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,23 +1,98 @@
 body {
-    background-color: lightgray;
+  margin: 0;
+  background-color: lightgray;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
 }
 
-div {
-    display: flex;
-    flex-direction: column;
-    margin: auto;
+.Main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-h1 {
-    margin: auto;
+.Main-Content {
+  width: 900px;
+  background-color: white;
+  height: 700px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
 }
 
-.Results {
-    display: flex;
-    flex-direction: row;
-    margin: auto;
+.Main-Error {
+  color: red;
+  border: 5px solid red;
+  padding: 10px;
+  margin: 10px;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  align-self: center;
+}
+.Main-Error p {
+  margin: 0px;
 }
 
-.Results div {
-    padding: 20px;
+.Main-Header {
+  margin: 0;
+  padding: 10px;
+  font-size: 23px;
+  font-weight: 700;
+  width: 100%;
+  height: 70px;
+  background-color: #12A89D;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.Main-Header h1 {
+  margin: 0px;
+}
+
+.Form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 18px;
+}
+.Form div {
+  margin-top: 10px;
+  padding: 10px;
+  border: 4px solid black;
+}
+.Form p {
+  margin: 10px;
+}
+.Form input {
+  padding: 5px;
+  margin: 5px;
+}
+
+.Winner {
+  font-size: 20px;
+  font-weight: 600;
+  align-self: center;
+}
+
+.Result-Main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.Results-City {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.Results-City div {
+  background-color: #6fd5cf;
+  padding: 0px 15px 0px 15px;
+  margin: 0px 10px 0px 10px;
+  border: 2px solid black;
+}
+.Results-City h {
+  margin: auto;
 }
